# KnightsLauncher

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.windows  LICENSE  README.md  angular.json  docker-compose.yml  package-lock.json  package.json  rustfmt.toml  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
src/: index.html  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/app/: AppComponent.html  AppComponent.ts  AppConfig.ts  Config.ts
src/app/api/: ApiService.ts  GameVersionService.ts
src/app/api/model/: GameVersion.ts  VersionDownload.ts
src/app/components/InstallVersionModal/: InstallVersionModalComponent.css  InstallVersionModalComponent.html  InstallVersionModalComponent.ts
src/app/components/VersionEditorModal/: VersionEditorModalComponent.html  VersionEditorModalComponent.ts
src/app/components/VersionList/: VersionListComponent.html  VersionListComponent.ts
src/app/detection/: GameDetectionService.ts
src/app/download/: DownloadService.ts
src/app/installation/: InstallationService.ts
src/app/launch/: LaunchService.ts
src/app/storage/: BaseStorageService.ts  ConfigService.ts  StateService.ts
src/app/storage/model/: InstalledVersion.ts  LauncherConfig.ts  LauncherState.ts
